daikoku/javascript/src/style/layout/style.scss
body {
  font-family: Custom, Raleway, Helvetica, sans-serif;
  background-color: $body-bg-color;
  color:$body-text-color;
}
//remove blue border on chrome
*:focus {
  outline: 0;
}

.a-fake,
a {
  color: $link-color;
}

.a-fake {
  cursor: pointer;
}

.a-fake:hover,
.btn:focus,
.btn:hover,
a:hover {
  color:  $link-hover-color;
}

.cursor-pointer {
  cursor: pointer;
}

.cursor-help {
  cursor: help;
}

.cursor-forbidden {
  cursor: not-allowed;
}

hr{
  border-top-color: $form-border-color;
}
.word-break {
  word-break: break-all;
}

.hide {
  display: none;
}

.user-logo {
  background-color: white;
}

.month__selector .ant-calendar-picker:hover .ant-calendar-picker-clear {
  opacity: 0;
}

main {
  background-color: $body-bg-color;

  // .jumbotron {
  //   background-color: #fff;
  // }
}

.fa-xxs {
  font-size: 0.5em;
}

.api-description > p {
  text-align: justify;
}

a.nav-link.active {
  background-color: rgb(233, 236, 239);
}

[role="root-container"] {
  padding-top: 130px;
  @media screen and (min-width: 576px) {
    padding-top: 90px;
  }
  @media screen and (min-width: 768px) {
    padding-top: 60px;
  }
}


.section,.album{
  background-color: $section-bg-color;
  color:$section-text-color;
}

.underline-on-hover:hover {
  text-decoration: underline;
}

.additionalContent {
  background-color: $aside-bg-color;
  color:$aside-text-color;
}

.navDocumentation ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.navDocumentation li::before {
  content: "◦ ";
  color: #6c757d;
}

.hr-apidescription {
  width: 100%;
  border-bottom: 1px solid #BBBBBB;
  border-top: 0;
  margin-top: 5px;
  margin-bottom: 5px;
}

.container-api {
  padding-bottom: 60px;
}

.form-back-fixedBtns {
  justify-content: flex-end;
  position: fixed;
  bottom: 0;
  height: 60px;
  background-color: $body-bg-color;
  width: 100%;
  left: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
  z-index: 5;
}

.tenantLogo {
  width: 290px;
}

.mediumAssetChooser {
    width: 200px;
}

.changePicture {
   position:absolute;
   display:none;
}

img:hover+.changePicture,.changePicture:hover{
  display:block;
  opacity: .5;
}

.swagger-ui .info hgroup.main a{
  word-break: break-all;
}

.language-selector {
  width: 150px;
}

.nav-tabs{
  border-color: $btn-border-color;
  .nav-link:hover,.nav-link:focus{
      cursor: pointer;
      background-color: $btn-bg-hover-color;
      color: $btn-text-hover-color;
  }
  .nav-link.active, .nav-item.show .nav-link {
    color: $btn-text-color;
    background-color: $btn-bg-color;
    border-color: $btn-border-color;
  }
}

.beautiful-popover {
  z-index: 100;
  max-width: 250px;
}

.Popover-body {
  display: flex;
  padding: 5px 10px;
  background: hsl(0, 0%, 27%);
  color: white;
  border-radius: 4px;
  justify-content: center;
  align-items: center;

}

.Popover-tipShape {
  fill: hsl(0, 0%, 27%)
}



/* rwd */
@media screen and (min-width: 576px) {
  .col-form-label {
    text-align: right;
  }
}

.impersonator-topbar-mb {
  @media screen and (max-width: 1100px) {
    margin-bottom: 20px;
  }
  @media screen and (max-width: 768px) {
    margin-bottom: 80px;
  }
  @media screen and (max-width: 540px) {
    margin-bottom: 40px;
  }
}
@media screen and (max-width: 540px) {
  .nav-tabs {

    .nav-tabs .nav-item:first-child {
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
    }

  .nav-item.show .nav-link,
  .nav-link.active {
    background-color: $btn-bg-color;
  }
}
  .onglets {
    padding-left: 15px;
  }

  .pricing-content {
    margin-top: 20px;
  }

  .h1-rwd-reduce {
    font-size: 1.8rem;
  }
}

.ohnohoney {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  height: 0;
  width: 0;
  z-index: -1;
}

